# rmeas

./: README.md  pyproject.toml
rmeas/: logging.py  rmeas.py  sigma.py
tests/: test_iteration.py
