[tool.poetry]
name = "rmeas"
version = "0.1.0"
description = "Tool to measure background and rms of radio images"
authors = ["tgalvin <tim.galvin@csiro.au>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scipy = "^1.13.0"
matplotlib = "^3.9.0"
astropy = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rmeas = "rmeas.rmeas:cli"
